syntax = "proto3";
package dbproto;

message Faq {
    int64 id = 1;
    string title = 2;
    string content = 3;
    string contentUrl = 4;
    string html = 5;
    bool isVisible = 6;
    int64 createTime = 7;
    int64 updateTime = 8;
    int32 sort = 9;
}

message QueryFaqArg {
    string  title = 1;
    int32   page = 2;
    int32   pageSize = 3;
}

message FaqId {
    int64 id = 1;
}

message FaqList {
    repeated Faq list = 1;
    int64 total = 2;
}